# Console-3D-Cube

./: CMakeLists.txt  README.md  main.cpp
headers/: cube.h  object.h  quaternion.h  screen.h  vec.h
src/: cube.cpp  object.cpp  quaternion.cpp  screen.cpp  structs.cpp  vec.cpp
